# picoOS

./: .clangd  .gitignore  CMakeLists.txt  LICENCE.md  README.md  build  clean  design.md  pico_sdk_import.cmake  pl-pico-reference-card.md
docs/: application.md  design.md  expandfilesystem.md  fedora-build.md  imperfections.md  pico2support.md  picoOS_API.md  project-submodule.md  setup.md  studentwork.md  testing.md
docs/book/: book-outline.md  investigation-notes.md
src/: CMakeLists.txt  btstack_config.h  lwipopts.h  main.c
src/apps/: app_table.h  cray_one.c  demo.c  demo.h  pi.c  pi.h  wifi_test.c
src/drivers/: display.c  display.h  led.c  led.h
src/kernel/: arch.h  bluetooth.c  bluetooth.h  dev.c  dev.h  fs.c  fs.h  mem.c  mem.h  sched.c  sched.h  sched_asm.S  sync.c  sync.h  syscall.c  syscall.h  task.c  task.h  vfs.c  vfs.h  wifi.c  wifi.h
src/shell/: shell.c  shell.h
tests/: CMakeLists.txt  compile_flags.txt  framework.h
tests/fs/: mock_flash.c  mock_flash.h  test_fs.c
tests/mem/: test_mem.c
tests/sync/: mock_sched.c  test_sync.c
tests/vfs/: mock_dev.c  mock_dev.h  mock_fs.c  mock_fs.h  test_vfs.c
tools/: add_license.py  console.py  gen_font12.py  mem_report.py
